--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,11 @@ passlib[bcrypt]==1.7.4
 aiofiles==23.2.1
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+gunicorn==21.2.0
 httpx==0.25.2
 beautifulsoup4==4.12.2
 lxml==4.9.3 
